--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Prantik Mahata" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Prantik Mahata</h1>
+          <h1 class="name" title="Prantik Mahata">Prantik Mahata</h1>
 
           <p class="title">Developer</p>
           
@@ -204,10 +204,8 @@
 
           <p>
             My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use.
+            My aim is to bring across your message and identity in the most creative way.
           </p>
         </section>
 
@@ -265,7 +263,7 @@
                 <h4 class="h4 service-item-title">Photography</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Discovering the artistry in every scene.
                 </p>
               </div>
 
@@ -281,7 +279,7 @@
                 <h4 class="h4 service-item-title">Blog Writing</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  I write blogs to explore new ideas and challenge my perspectives.
                 </p>
               </div>
 
