--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
         <section>
           <br>
-          <a href="https://github.com">
+          <a href="https://drive.google.com/file/d/1jblz8hzCvs47-UIAWEt0IqGRJqNBek-3/view?usp=sharing">
             <button class="form-btn" type="button">
               <ion-icon name="cloud-download-outline"></ion-icon>
               <span>Download Resume</span>
@@ -434,7 +434,7 @@
           </ul>
 
         </section>
-
+       
       </article>
 
        <!--
